--- a/TwitterBackup.Data/TwitterBackup.Data.csproj
+++ b/TwitterBackup.Data/TwitterBackup.Data.csproj
@@ -6,8 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.1" />
-    <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TwitterBackup.Models\TwitterBackup.Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
