--- a/TwitterBackup.DTO/TwitterBackup.DTO.csproj
+++ b/TwitterBackup.DTO/TwitterBackup.DTO.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TwitterBackup.Models\TwitterBackup.Models.csproj" />
+  </ItemGroup>
+
 </Project>
