--- a/TwitterBackup.Web/TwitterBackup.Web.csproj
+++ b/TwitterBackup.Web/TwitterBackup.Web.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="TweetViewModels\" />
   </ItemGroup>
 
 </Project>
