--- a/TwitterBackup.Services.ApiClient/TwitterBackup.Services.ApiClient.csproj
+++ b/TwitterBackup.Services.ApiClient/TwitterBackup.Services.ApiClient.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="RestSharp" Version="106.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TwitterBackup.DTO\TwitterBackup.DTO.csproj" />
+  </ItemGroup>
+
 </Project>
