--- a/TwitterBackup.Web/TwitterBackup.Web.csproj
+++ b/TwitterBackup.Web/TwitterBackup.Web.csproj
@@ -27,6 +27,7 @@
     <ProjectReference Include="..\TwitterBackup.Services.ApiClient\TwitterBackup.Services.ApiClient.csproj" />
     <ProjectReference Include="..\TwitterBackup.Services.Data\TwitterBackup.Services.Data.csproj" />
     <ProjectReference Include="..\TwitterBackup.Services.Email\TwitterBackup.Services.Email.csproj" />
+    <ProjectReference Include="..\TwitterBackup.Services.TwitterAPI\TwitterBackup.Services.TwitterAPI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
