--- a/UnitTestProject1/TwitterBackup.Services.Data.Tests.csproj
+++ b/UnitTestProject1/TwitterBackup.Services.Data.Tests.csproj
@@ -4,25 +4,24 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <AssemblyName>TwitterBackup.Services.Data.Tests</AssemblyName>
+
+    <RootNamespace>TwitterBackup.Services.Data.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.0" />
     <PackageReference Include="Moq" Version="4.8.2" />
-    <PackageReference Include="MSTest.TestAdapter" Version="1.2.1" />
+    <PackageReference Include="MSTest.TestAdapter" Version="1.2.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TwitterBackup.Data\TwitterBackup.Data.csproj" />
     <ProjectReference Include="..\TwitterBackup.Infrastructure\TwitterBackup.Infrastructure.csproj" />
-    <ProjectReference Include="..\TwitterBackup.Services.ApiClient\TwitterBackup.Services.ApiClient.csproj" />
-    <ProjectReference Include="..\TwitterBackup.Services.TwitterAPI\TwitterBackup.Services.TwitterAPI.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Moq">
-      <HintPath>..\..\..\..\..\..\.nuget\packages\moq\4.8.2\lib\netstandard1.3\Moq.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\TwitterBackup.Models\TwitterBackup.Models.csproj" />
+    <ProjectReference Include="..\TwitterBackup.Services.Data\TwitterBackup.Services.Data.csproj" />
   </ItemGroup>
 
 </Project>
