test commit - conn. str.

--- a/TwitterBackup.Web/appsettings.json
+++ b/TwitterBackup.Web/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=TwitterBackup;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=TwitterBackup;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AzureConnection": "Server=.\\twtrserver;Database=TwtrDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
